# My_FastAPI_contacts

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 13e08330deb9_init.py  c5a299d66b13_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: todos.py
src/schemas/: todo.py
