[tool.poetry]
name = "my-first-fastapi"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
